--- a/biodiversity_assigmnent_rmd.Rmd
+++ b/biodiversity_assigmnent_rmd.Rmd
@@ -24,11 +24,12 @@ perc = read.csv("percent_cover.csv")
 
 ## Question
 
-How does percent-cover of upright and crust seaweeds affect intertidal invertebrate diversity?
+How does percent-cover of upright and crustose seaweeds affect intertidal invertebrate diversity?
 
 ## Hypothesis
 
-If an area has a higher percent cover of upright seaweeds, then intertidal diversity will be higher because they provide microhabitats and are recruiters.  
+If an area has a higher percent cover of upright seaweeds, then intertidal invertebrate diversity and richness will be higher because upright seaweeds provide microhabitats and are recruiters.   
+
 
 ## Data Collection and Data Type
 
@@ -36,7 +37,7 @@ At Scott's Bay, we placed two transects parallel to the shoreline with one wave 
 
 ## Analysis Summary
 
-We calculated the species richness and diversity (using the Shannon-Wiener index) of quadrates compared to percent cover of upright algae and crustose algae.  We then performed a simple linear regression to see if percent cover of crustose or upright algae has a significant effect on diversity and richness.
+We calculated the species richness and diversity (using the Shannon-Wiener index) of invertebrates in quadrates compared to percent cover of upright algae and crustose algae.  We then performed a simple linear regression to see if percent cover of crustose or upright algae has a significant effect on diversity and richness.
 
 ## Results
 
@@ -92,13 +93,13 @@ Now, we plot the relationship between diversity and seaweed cover using ggplot a
 figure1<-ggplot(data = Data, aes(x=per_upright, y =ShannonIndex))+ 
   geom_point()+
   geom_smooth(method=lm, se=FALSE)+
-  labs(x="Percent cover of upright algae (%)", y="Shannon-Wiener index")
+  labs(x="Percent cover of upright algae", y="Shannon-Wiener index")
 
 # visualizing crust percent cover and diversity
 figure2<-ggplot(data = Data, aes(x=per_crust, y =ShannonIndex))+ 
   geom_point()+
   geom_smooth(method=lm, se=FALSE)+
-  labs(x="Percent cover of crustose algae (%)", y="Shannon-Wiener index")
+  labs(x="Percent cover of crustose algae", y="Shannon-Wiener index")
 
 # visualizing upright percent cover and richness
 figure3<-ggplot(data = Data, aes(x=per_upright, y =rich))+ 
@@ -177,5 +178,5 @@ knitr::kable(table, caption= "Linear regression results of the relationship betw
 
 ## Conclusions
 
-As none of the p-values are less than 0.05, there is no significant relationship between algae type and both diversity and richness.
+As none of the p-values are less than 0.05, there is no significant relationship between algae type and both invertebrate diversity and richness.
 
